Update swagger generated docs.
