# src/apiHandlers/userHandlers/types.go
@@ -68,11 +68,11 @@ type SearchUserData = database.SearchUserData // @name SearchUserData
 
 type SearchUserResult struct {
 	Users []SearchedUserInfo `json:"users"`
-}
+} // @name SearchUserResult
 
 type SearchedUserInfo struct {
 	UserId   string             `json:"user_id"`
 	FullName string             `json:"full_name"`
 	Role     appValues.UserRole `json:"role"`
 	Email    string             `json:"email"`
-}
+} // @name SearchedUserInfo
